[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/DialogueSystem.gd" type="Script" id=1]
[ext_resource path="res://UI/Steelworks Vintage Demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Clock.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Canvas" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Anchor", "Margin", "Pause" ]

[node name="DialogueSystem" type="Control" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -126.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="speakerPanel" type="Panel" parent="DialogueSystem" index="0"]

light_mask = 16
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = -57.0
margin_right = 279.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="speaker" type="Label" parent="DialogueSystem/speakerPanel" index="0"]

light_mask = 16
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="panel" type="Panel" parent="DialogueSystem" index="1"]

light_mask = 16
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_right = -54.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="rtl" type="RichTextLabel" parent="DialogueSystem/panel" index="0"]

light_mask = 16
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "dsdasdsadasdsa"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "dsdasdsadasdsa"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Material", "Visibility" ]

[node name="timeBetweenLetters" type="Timer" parent="DialogueSystem" index="2"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false

[node name="talklessFrames" type="Timer" parent="DialogueSystem" index="3"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="DialogueSystem" index="4"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Clock" parent="." index="1" instance=ExtResource( 3 )]

margin_right = -883.0
margin_bottom = 154.0

[connection signal="timeout" from="DialogueSystem/talklessFrames" to="DialogueSystem" method="_on_talklessFrames_timeout"]


